--- a/css/main.css
+++ b/css/main.css
@@ -470,3 +470,19 @@ a#force-init-button:hover {
 .users > .user:hover .follow {
     display: block;
 }
+
+.logs .connect, .disconnect {
+    color: #999;
+    font-size: 1.3em;
+}
+
+.logs .connect .name {
+    color: white;
+    font-weight: bold;
+}
+
+.logs .connect .name:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
